; ModuleID = '/home/carl/AnghaBench/php-src/ext/intl/idn/extr_idn.c_php_intl_idn_check_status.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/intl/idn/extr_idn.c_php_intl_idn_check_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"%s: %s\00", align 1
@FAILURE = common dso_local global i32 0, align 4
@SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @php_intl_idn_check_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @php_intl_idn_check_status(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @intl_error_set_code(i32* null, i32 %7)
  %9 = load i32, i32* %4, align 4
  %10 = call i64 @U_FAILURE(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %21

12:                                               ; preds = %2
  %13 = call i32 (...) @get_active_function_name()
  %14 = load i8*, i8** %5, align 8
  %15 = call i32 @spprintf(i8** %6, i32 0, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %13, i8* %14)
  %16 = load i8*, i8** %6, align 8
  %17 = call i32 @intl_error_set_custom_msg(i32* null, i8* %16, i32 1)
  %18 = load i8*, i8** %6, align 8
  %19 = call i32 @efree(i8* %18)
  %20 = load i32, i32* @FAILURE, align 4
  store i32 %20, i32* %3, align 4
  br label %23

21:                                               ; preds = %2
  %22 = load i32, i32* @SUCCESS, align 4
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %21, %12
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @intl_error_set_code(i32*, i32) #1

declare dso_local i64 @U_FAILURE(i32) #1

declare dso_local i32 @spprintf(i8**, i32, i8*, i32, i8*) #1

declare dso_local i32 @get_active_function_name(...) #1

declare dso_local i32 @intl_error_set_custom_msg(i32*, i8*, i32) #1

declare dso_local i32 @efree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
